# NanoCode

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: agent_test_plan.md  dev_plan.md  how-to-use-uv.md  message_refactor_plan.md  uv-ruff-format.md
nanocode/: __init__.py  __main__.py  agent.py  message.py  utils.py
nanocode/core/: __init__.py  background.py  context.py  cron.py  hook.py  memory.py  permission.py  prompt.py  skill_loader.py  task_manager.py
nanocode/llm/: __init__.py  openai_client.py
nanocode/tools/: __init__.py  background_tool.py  background_tools.py  base.py  bash.py  bash_tool.py  cron_tool.py  file.py  file_tool.py  memory_tool.py  memory_tools.py  skill.py  skill_tool.py  subagent.py  subagent_tool.py  task_tool.py  task_tools.py
skills/memory/: SKILL.md
src/: __init__.py  __main__.py  agent.py  agent_loop.py  config.py  utils.py
src/core/: __init__.py  background.py  context.py  cron.py  hook.py  memory.py  permission.py  prompt.py  skill_loader.py  task_manager.py
src/llm/: openai_client.py
src/tools/: __init__.py  background_tools.py  base.py  bash.py  cron_tool.py  file.py  memory_tools.py  skill.py  subagent.py  task_tools.py
tests/tools/: test_background_tool.py  test_base.py  test_bash_tool.py  test_cron_tool.py  test_file_tool.py  test_memory_tool.py  test_skill_tool.py  test_subagent_tool.py  test_task_tool.py
workspace/: config.json
